--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     background: #4fa9b5;
     background-image: url('https://img.freepik.com/free-vector/flat-design-monsoon-season-clouds-illustration_23-2149424294.jpg');
+    background-repeat:none;
 }
 
 #app {
