--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: #4fa9b5;
-    background-image: url('https://img.freepik.com/free-vector/flat-design-monsoon-season-clouds-illustration_23-2149424294.jpg');
-    background-repeat:no-repeat;
+    background: linear-gradient(180deg, rgb(8, 6, 59) 0%, rgb(162, 96, 157) 49%, rgb(233, 166, 244) 100%);
 }
 
 #app {
