--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: linear-gradient(180deg, rgb(8, 6, 59) 0%, rgb(162, 96, 157) 49%, rgb(233, 166, 244) 100%);
+    background: linear-gradient(180deg, rgb(120, 85, 65) 0%, rgb(162, 96, 157) 49%, rgb(233, 166, 244) 100%);
 }
 
 #app {
@@ -13,6 +13,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background:#33d3d6;
 }
 
 input, button {
